@@ -1,0 +1,1 @@
+liblnk is a library to access the Windows Shortcut File (LNK) format.
